# iridis

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  mdbook.yml
crates/derive/flarrow-api-derive/: Cargo.toml
crates/derive/flarrow-file-ext-derive/: Cargo.toml
crates/derive/flarrow-message-derive/: Cargo.toml
crates/derive/flarrow-url-scheme-derive/: Cargo.toml
crates/derive/iridis-api-derive/: Cargo.toml
crates/derive/iridis-file-ext-derive/: Cargo.toml
crates/derive/iridis-message-derive/: Cargo.toml
crates/derive/iridis-node-derive/: Cargo.toml
crates/derive/iridis-url-scheme-derive/: Cargo.toml
crates/derive/iris-api-derive/: Cargo.toml
crates/derive/iris-api-derive/src/: lib.rs
crates/derive/iris-file-ext-derive/: Cargo.toml
crates/derive/iris-message-derive/: Cargo.toml
crates/derive/iris-url-scheme-derive/: Cargo.toml
crates/flarrow-api/: Cargo.toml
crates/flarrow-api-derive/: Cargo.toml
crates/flarrow-api-derive/src/: lib.rs
crates/flarrow-api/examples/: client.rs  service.rs  sink.rs  source.rs
crates/flarrow-api/src/: io.rs  lib.rs  message.rs  node.rs  report.rs
crates/flarrow-api/src/io/: input.rs  inputs.rs  output.rs  outputs.rs  queries.rs  query.rs  queryable.rs  queryables.rs  raw_input.rs  raw_output.rs  raw_query.rs  raw_queryable.rs
crates/flarrow-builtins/: Cargo.toml
crates/flarrow-builtins/src/: enumeration.rs  lib.rs  printer.rs  python.rs  timer.rs  zenoh_in.rs  zenoh_out.rs
crates/flarrow-flows/: Cargo.toml
crates/flarrow-flows/examples/: service_flows.rs  simple_flows.rs
crates/flarrow-flows/src/: flows.rs  lib.rs
crates/flarrow-layout/: Cargo.toml
crates/flarrow-layout/examples/: layout.rs  layout_query.rs  service_layout.rs  simple_layout.rs
crates/flarrow-layout/src/: io.rs  layout.rs  lib.rs  node.rs
crates/flarrow-message/: Cargo.toml
crates/flarrow-message-derive/: Cargo.toml
crates/flarrow-message-derive/src/: lib.rs
crates/flarrow-message-python/: Cargo.toml  pyproject.toml
crates/flarrow-message-python/examples/: message_enum_inherit.py
crates/flarrow-message-python/python/flarrow_message/: __init__.py
crates/flarrow-message-python/src/: lib.rs
crates/flarrow-message/examples/: message_complex.rs  message_derive.rs  message_enum_derive.rs  message_enum_impl.rs  message_flattening.rs  message_impl.rs
crates/flarrow-message/src/: helper.rs  lib.rs  traits.rs
crates/flarrow-message/src/traits/: flattening.rs  message.rs
crates/flarrow-message/tests/: zero_copy.rs
crates/flarrow-runtime/: Cargo.toml
crates/flarrow-runtime-core/: Cargo.toml
crates/flarrow-runtime-core/src/: lib.rs  node.rs
crates/flarrow-runtime-plan/: Cargo.toml
crates/flarrow-runtime/examples/: runtime.rs  runtime_service.rs  service_runtime.rs  simple_runtime.rs
crates/flarrow-runtime/src/: flows.rs  lib.rs  node.rs  plugins.rs  runtime.rs
crates/flarrow-runtime/src/plugins/: file_ext_default.rs  url_scheme_default.rs
crates/flarrow-url/: Cargo.toml
crates/flarrow-url-default/: Cargo.toml
crates/flarrow-url-default/src/: lib.rs
crates/flarrow-url/examples/: url.rs
crates/flarrow-url/src/: kind.rs  lib.rs  node.rs  plugin.rs  process.rs
crates/iridis/: Cargo.toml
crates/iridis-api/: Cargo.toml
crates/iridis-api/examples/: client.rs  service.rs  sink.rs
crates/iridis-api/src/: io.rs  lib.rs
crates/iridis-api/src/io/: input.rs  output.rs  query.rs  queryable.rs  raw_output.rs  raw_query.rs  raw_queryable.rs
crates/iridis-builtins/: Cargo.toml
crates/iridis-builtins/src/: enumeration.rs  lib.rs  (+3 more)
crates/iridis-examples/: Cargo.toml
crates/iridis-examples/examples/: client.rs  io_layout.rs  io_layout_thr.rs  io_runtime.rs  message_derive.rs  message_impl.rs  service.rs  service_layout.rs  service_runtime.rs  sink.rs  source.rs
crates/iridis-examples/src/: lib.rs
crates/iridis-flows/: Cargo.toml
crates/iridis-flows/examples/: service_flows.rs  simple_flows.rs
crates/iridis-flows/src/: flows.rs  lib.rs
crates/iridis-layout/: Cargo.toml
crates/iridis-message/: Cargo.toml
crates/iridis-node/: Cargo.toml
crates/iridis-runtime/: Cargo.toml
crates/iridis-runtime-core/: Cargo.toml
crates/iridis-tests/: Cargo.toml
crates/iridis-tests/src/: layout.rs  lib.rs
crates/iridis/examples/: service_runtime.rs  simple_runtime.rs
crates/iridis/src/: flows.rs  lib.rs  loader.rs  plugins.rs  report.rs  runtime.rs
crates/iridis/src/plugins/: file_ext_default.rs  url_scheme_default.rs
crates/iris-api/: Cargo.toml
crates/iris-builtins/: Cargo.toml
crates/iris-builtins/src/: enumeration.rs  lib.rs  transport.rs
crates/iris-flows/: Cargo.toml
crates/iris-flows/examples/: service_flows.rs  simple_flows.rs
crates/iris-flows/src/: lib.rs
crates/iris-layout/: Cargo.toml
crates/iris-layout/examples/: service_layout.rs  simple_layout.rs
crates/iris-message/: Cargo.toml
crates/iris-message/examples/: message_complex.rs  message_derive.rs  message_enum_derive.rs  message_enum_impl.rs  message_impl.rs
crates/iris-message/src/: helper.rs  lib.rs
crates/iris-message/tests/: zero_copy.rs
crates/iris-runtime/: Cargo.toml
crates/iris-runtime-core/: Cargo.toml
crates/iris-runtime/examples/: service_runtime.rs  simple_runtime.rs
crates/iris-runtime/src/: lib.rs
crates/iris-runtime/src/plugins/: file_ext_default.rs  url_scheme_default.rs
crates/plugins/flarrow-file-ext/: Cargo.toml
crates/plugins/flarrow-file-ext/src/: file_ext.rs  file_ext_default.rs  lib.rs
crates/plugins/flarrow-url-scheme/: Cargo.toml
crates/plugins/flarrow-url-scheme/src/: lib.rs  plugin.rs  url_scheme.rs  url_scheme_default.rs
crates/plugins/iridis-url-scheme/: Cargo.toml
crates/plugins/iridis-url-scheme/src/: lib.rs  plugin.rs  url_scheme.rs
crates/plugins/iris-file-ext/: Cargo.toml
crates/plugins/iris-file-ext/src/: file_ext.rs  lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  examples.md  flarrow-runtime.md  getting-started.md  installation.md  iridis.md  iris-runtime.md  layout.md  message.md  node.md  organization.md  plugins.md  runtime.md
(+67 files in other folders)
