[workspace]
members = [
    "crates/iridis-node",
    "crates/derive/iridis-node-derive",
    "crates/iridis-builtins",
    "crates/iridis-layout",
    "crates/iridis-message",
    "crates/derive/iridis-message-derive",
    "crates/iridis",
    "crates/iridis-flows",
    "crates/iridis-runtime-core",
    "crates/plugins/iridis-url-scheme",
    "crates/plugins/iridis-file-ext",
    "crates/derive/iridis-file-ext-derive",
    "crates/derive/iridis-url-scheme-derive",
    "crates/iridis-examples",
]
resolver = "3"

[workspace.package]
authors = ["Enzo Le Van <dev@enzo-le-van.fr>"]
description = "iridis is a framework that lets you define and build dataflow applications with ease."
edition = "2024"
homepage = "https://iridis-rs.github.io/iridis/"
keywords = []
readme = "README.md"
rust-version = "1.86.0"
categories = []
documentation = "https://iridis-rs.github.io/iridis/"
license = "Apache-2.0"
repository = "https://github.com/iridis-rs/iridis"
version = "0.3.4"

[workspace.dependencies]
eyre = { version = "0.6", default-features = false, features = [
    "auto-install",
] }

url = { version = "2", default-features = false, features = ["std"] }
uhlc = { version = "0.8", default-features = false }

serde_yml = "0.0.12"

libloading = "0.8"

proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

arrow-data = "55"
arrow-schema = "55"
arrow-array = "55"
arrow-buffer = "55"

uuid = { version = "1", default-features = false, features = ["v4", "v3"] }

tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "signal",
] }

tracing = "0.1"
tracing-subscriber = "0.3"

iridis-layout = { version = "0.3.4", path = "crates/iridis-layout" }

iridis-message = { version = "0.3.4", path = "crates/iridis-message" }
iridis-message-derive = { version = "0.3.4", path = "crates/derive/iridis-message-derive" }

iridis-node = { version = "0.3.4", path = "crates/iridis-node" }
iridis-node-derive = { version = "0.3.4", path = "crates/derive/iridis-node-derive" }

iridis-builtins = { version = "0.3.4", path = "crates/iridis-builtins" }

iridis-flows = { version = "0.3.4", path = "crates/iridis-flows" }

iridis-runtime-core = { version = "0.3.4", path = "crates/iridis-runtime-core" }

iridis-file-ext = { version = "0.3.4", path = "crates/plugins/iridis-file-ext" }
iridis-file-ext-derive = { version = "0.3.4", path = "crates/derive/iridis-file-ext-derive" }
iridis-url-scheme = { version = "0.3.4", path = "crates/plugins/iridis-url-scheme" }
iridis-url-scheme-derive = { version = "0.3.4", path = "crates/derive/iridis-url-scheme-derive" }

iridis = { version = "0.3.4", path = "crates/iridis" }


[workspace.metadata.release]
rate-limit.new-packages = 10
tag = false
