[package]
name = "flarrow-api"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
uhlc = { workspace = true }
serde_yml = { workspace = true }

flarrow-message = { workspace = true }
flarrow-layout = { workspace = true }

flarrow-api-derive = { workspace = true }

[[example]]
name = "sink"
path = "examples/sink.rs"
crate-type = ["cdylib"]
