[package]
name = "flarrow-message-python"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flarrow_message"
crate-type = ["cdylib"]

[features]
default = ["arrow/pyarrow"]

[dependencies]
pyo3 = { workspace = true, features = ["eyre", "extension-module"] }
arrow = { workspace = true }

[package.metadata.release]
release = false
