[package]
name = "flarrow-message"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
arrow-data = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }

serde = { workspace = true, optional = true }

flarrow-message-derive = { workspace = true }
