[package]
name = "flarrow-runtime"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
uhlc = { workspace = true }
url = { workspace = true }
libloading = { workspace = true }

flarrow-url = { workspace = true }
flarrow-api = { workspace = true }

flarrow-url-default = { workspace = true }
