[package]
name = "flarrow-runtime"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
cdylib = []

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uhlc = { workspace = true }
serde_yml = { workspace = true }
libloading = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

flarrow-api = { workspace = true }
flarrow-runtime-core = { workspace = true }
flarrow-flows = { workspace = true }
flarrow-builtins = { workspace = true }

flarrow-file-ext = { workspace = true }
flarrow-url-scheme = { workspace = true }
flarrow-layout = { workspace = true }
