[package]
name = "flarrow-url-default"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eyre = { workspace = true }
url = { workspace = true }
libloading = { workspace = true }
tokio = { workspace = true }

flarrow-url = { workspace = true }
flarrow-builtins = { workspace = true }
