[package]
name = "flarrow-url"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }

flarrow-builtins = { workspace = true }
