[package]
name = "iridis-api"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
cdylib = []

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
uhlc = { workspace = true }
serde_yml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

arrow-data = { workspace = true }
arrow-array = { workspace = true }

iridis-message = { workspace = true }
iridis-layout = { workspace = true }

iridis-api-derive = { workspace = true }

[[example]]
name = "sink"
path = "examples/sink.rs"
crate-type = ["cdylib"]

[[example]]
name = "service"
path = "examples/service.rs"
crate-type = ["cdylib"]

[[example]]
name = "client"
path = "examples/client.rs"
crate-type = ["cdylib"]
