[package]
name = "iridis-tests"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["iridis"]
cdylib = []

[dependencies]
iridis = { workspace = true, optional = true }
iridis-node = { workspace = true }
iridis-message = { workspace = true }

tracing-subscriber = { workspace = true }

[package.metadata.release]
release = false
