[package]
name = "iridis"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
cdylib = []

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uhlc = { workspace = true }
serde_yml = { workspace = true }
libloading = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

iridis-api = { workspace = true }
iridis-runtime-core = { workspace = true }
iridis-flows = { workspace = true }
iridis-builtins = { workspace = true }

iridis-file-ext = { workspace = true }
iridis-url-scheme = { workspace = true }
iridis-layout = { workspace = true }
