[package]
name = "iris-builtins"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
cdylib = []

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
serde_yml = { workspace = true }

iris-api = { workspace = true }
