[package]
name = "iridis-url-scheme"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
serde_yml = { workspace = true }
libloading = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

iridis-node = { workspace = true }
iridis-runtime-core = { workspace = true }

iridis-file-ext = { workspace = true }
iridis-url-scheme-derive = { workspace = true }
